Udated and integrated signup and login